--- a/docs/source/getting_started/installation/cpu/s390x.inc.md
+++ b/docs/source/getting_started/installation/cpu/s390x.inc.md
@@ -47,8 +47,8 @@ Please build the following dependencies, `torchvision`, `pyarrow` from the sourc
     sed -i '/^torch/d' requirements-build.txt    # remove torch from requirements-build.txt since we use nightly builds
     pip install -v \
         --extra-index-url https://download.pytorch.org/whl/nightly/cpu \
-        -r requirements-build.txt \
-        -r requirements-cpu.txt \
+        -r requirements/build.txt \
+        -r requirements/cpu.txt \
     VLLM_TARGET_DEVICE=cpu python setup.py bdist_wheel && \
     pip install dist/*.whl
 ```
